Removed sensitive info

--- a/scripts/wpa_supplicant.conf
+++ b/scripts/wpa_supplicant.conf
@@ -3,8 +3,8 @@ country=GB
 update_config=1
 
 network={
-	ssid="GuestNMF"
-	psk="Internet3000"
+	ssid="ssid"
+	psk="psk"
 	priority=1
 	id_str="HomeNetwork"
 }
@@ -18,15 +18,15 @@ network={
   	pairwise=CCMP
   	auth_alg=OPEN
   	eap=PEAP
-  	identity="dain0084"
-  	password="eal620298"
+  	identity="identity"
+  	password="password"
   	phase1="peaplabel=0"
   	phase2="auth=MSCHAPV2"
 }
 
 network={
-	ssid="Honor 9"
-	psk="12345678honor9"
+	ssid="ssid"
+	psk="psk"
 	priority=3
 	id_str="Hotspot"
 }
